--- a/css/main.css
+++ b/css/main.css
@@ -31,123 +31,541 @@
     --primary-text-colore: #757575;
     --title-text-colore: #212121;
     --accent-colore: #2196f3;
-    --btn-colore-primary: #ffffff;
     --bg-primary-colore-portfolio-btn: ##f5f4fa;
     --bg-footer-colore: #2f303a;
     --primary-text-footer-colore: #ffffff;
     --secondary-text-footer-colore: rgba(255, 255, 255, 0.6);
-    --web-logo-colore: #2196f3;
-    --foot-web-logo-colore: #2196f3;
 }
 
 body {
     background-color: #ffffff;
-    color: var(--primary-text-colore);
+    color: #757575;
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
 }
 
 .list {
     list-style: none;
-}
-
-.logo {
-    color: var(--title-text-colore);
-}
-
-.web-logo {
-    color: var(--web-logo-colore);
+    padding: 0px;
+    margin: 0px;
 }
 
 
-/* site nav */
+/* Шапка сайта, site nav */
+
+.header {
+    letter-spacing: 0.02em;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.container-1 {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+}
+
+.container-2 {
+    display: flex;
+    margin-right: 200px;
+    align-items: center;
+}
+
+.header-logo {
+    margin-left: 115px;
+    margin-top: 24px;
+    margin-right: 93px;
+    margin-bottom: 25px;
+}
+
+.site-nav {
+    display: flex;
+}
 
 .site-nav .link {
     color: #212121;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    text-decoration: none;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: block;
 }
 
-.cont-nav .link {
-    color: #212121;
+.site-nav .item+.item {
+    margin-left: 50px;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-    color: var(--accent-colore);
+    color: #2196f3;
 }
 
-.cont-nav .link:hover,
-.cont-nav .link:focus {
-    color: var(--accent-colore);
+.container-3 {
+    display: flex;
+    align-items: center;
 }
 
-.site-nav .link.current {
-    color: var(--accent-colore);
+.header-logo-2 {
+    margin-right: 10px;
 }
 
-.section .title {
-    color: var(--title-text-colore);
+.link-1 {
+    margin-right: 30px;
+    color: #212121;
 }
+
+.link-1:hover,
+.link-1:focus {
+    color: #2196f3;
+}
+
+.item .link:hover,
+.item .link:focus {
+    color: #2196f3;
+}
+
+.header-logo-3 {
+    margin-right: 10px;
+}
+
+.cont-nav {
+    display: flex;
+}
+
+.cont-nav .link {
+    color: #757575;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    text-decoration: none;
+}
+
+.link-2 {
+    color: #212121;
+}
+
+.link-2:hover,
+.link-2:focus {
+    color: #2196f3;
+}
+
+
+/* Hero */
+
+.hero-text {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    margin-top: 0px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 696px;
+    height: 120px;
+    color: #ffffff;
+}
+
+.hero {
+    background-color: #212121;
+    padding: 100px;
+    background-image: url(/images/Back\ hero.jpg);
+    position: cover;
+}
+
+.section .title,
+.command .title {
+    color: #212121;
+}
+
+button {
+    font-family: inherit;
+}
+
+.btn {
+    color: #212121;
+    background-color: #ffffff;
+}
+
+.btn.primary {
+    color: #ffffff;
+    background-color: #2196f3;
+    font-style: normal;
+    font-weight: 700;
+    size: 16px;
+    line-height: 30px;
+    display: flex;
+    letter-spacing: 0.06em;
+    width: 200px;
+    height: 50px;
+    padding-left: 31px;
+    padding-right: 31px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    border-left-width: 0px;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 0px;
+}
+
+
+/* Основна частина */
 
 
 /* Особливості feature-list*/
 
-.feature-list .title {
-    color: var(--title-text-colore);
+.container-4 {
+    margin-top: 94px;
 }
 
-.btn {
-    colore: var(--title-text-colore);
-    background-color: var(--btn-colore-primary);
+.feature-list {
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.btn.primary {
-    color: var(--btn-colore-primary);
-    background-color: var(--accent-colore);
+.feature-list img {
+    margin-right: 20px;
 }
 
-.btn.secondary {
-    color: var(--accent-colore);
-    background-color: var(--btn-colore-primary);
+.feature-list .title-1 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: #212121;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    width: 270px;
+    height: 16px;
+}
+
+.feature-list .title-2 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: #212121;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    width: 270px;
+    height: 16px;
+}
+
+.feature-list .title-3 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: #212121;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    width: 270px;
+    height: 16px;
+}
+
+.feature-list .title-4 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: #212121;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    width: 270px;
+    height: 16px;
+}
+
+.feature-text {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    width: 270px;
+    height: 75px;
+}
+
+
+/* Переваги, Preference */
+
+.preference,
+.command-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 94px;
+    margin-bottom: 50px;
+}
+
+.preference title {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.preference-list {
+    display: flex;
+    justify-content: center;
+}
+
+.preference-list .item+.item {
+    margin-left: 30px;
+}
+
+
+/* Команда command*/
+
+.command {
+    background-color: #F5F4FA;
+    ;
+}
+
+.command-title {
+    padding-top: 188px;
+}
+
+.list {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.list .item+.item {
+    margin-left: 30px;
+}
+
+.team {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+}
+
+.team-text {
+    font-size: 16px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+}
+
+.command .item {
+    background-color: #ffffff;
+    font-weight: 270px;
+    height: 428px;
+}
+
+
+/* клиенты partners*/
+
+.partners-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-top: 94px;
+    margin-bottom: 50px;
+}
+
+.partners-title title {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.partners .list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 94px;
+}
+
+
+/* Футер */
+
+footer {
+    background-color: #2f303a;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+}
+
+.container-footer {
+    display: flex;
+    margin-left: 215px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.web-foot-logo {
+    color: #2196f3;
+}
+
+.foot-logo {
+    color: #ffffff;
+}
+
+.footer.link {
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+}
+
+.foot-address {
+    color: #ffffff;
+}
+
+.address {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+}
+
+.container-footer1 {
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.container-footer1 .item {
+    display: flex;
+}
+
+.container-footer1 :not(:last-child) {
+    margin-bottom: 9px;
+}
+
+.social-text {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+    margin-top: 0%;
+    margin-bottom: 20px;
+}
+
+.container-footer2 {
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.social {
+    margin-left: 70px;
+    list-style: none;
 }
 
 
 /* Портфолио */
 
-.port-but .link {
-    color: var(--title-text-colore);
+
+/* Чим ми займаємось */
+
+.port-but .link-6 {
+    color: #212121;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    list-style: none;
 }
 
 .port-but .link:hover,
 .port-but .link:focus {
-    color: var(--btn-colore-primary);
-    background-color: var(--accent-colore);
+    color: #ffffff;
+    background-color: #2196f3;
 }
 
-.port-work {
-    color: var(--title-text-colore);
+.link-6 {
+    margin-left: 30px;
+    margin-top: 94px;
+    margin-bottom: 50px;
 }
 
-.port-work .link {
-    color: var(--title-text-colore);
+.port-work.list-2 {
+    display: inline-flex;
+    list-style: none;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    padding-left: 0%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
-
-/* Подвал */
-
-footer {
-    background-color: var(--bg-footer-colore);
+.port-work .title {
+    color: #212121;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    list-style: none;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 
-.web-foot-logo {
-    color: var(--foot-web-logo-colore);
+.container-6 {
+    display: inline-flex;
+    margin-bottom: 94px;
 }
 
-.foot-logo {
-    color: var(--primary-text-footer-colore);
+.port-work .text {
+    color: #212121;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.03em;
+    list-style: none;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 
-.footer.link {
-    color: var(--secondary-text-footer-colore);
+.link-7 {
+    wight: 370px;
+    height: 404px;
 }
 
-.foot-address {
-    color: var(--primary-text-footer-colore);
+.link-7 {
+    margin-right: 30px;
+}
+
+.container-work {
+    background-color: tomato;
+    margin-right: 30px;
+    width: 370px;
+    height: 404px;
 }
